<resources>
    <string name="app_name">TMDB GR</string>
    <string name="action_settings">Settings</string>
    <string name="most_popular">Most Popular</string>
    <string name="highest_rated">Highest Rated</string>
    <string name="sort">Sort</string>
    <string name="popular">Popular</string>
    <string name="rating">Rating : </string>
    <string name="title_activity_movie_details">MovieDetails</string>
    <string name="released_on">Released On : </string>
    <string name="popularity">Popularity :</string>
    <string name="tap_to_retry">Tap to Retry</string>
    <string name="title_activity_splash">Splash</string>
</resources>
